# saleor_theme_kotynkova

./: README.rst  apps.py  setup.cfg  urls.py
locale/bg_BG/LC_MESSAGES/: django.po
locale/cs/LC_MESSAGES/: django.mo  django.po
locale/de/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.mo
locale/fa_IR/LC_MESSAGES/: django.mo  django.po
locale/fr/LC_MESSAGES/: django.mo  django.po
locale/hu/LC_MESSAGES/: django.po
locale/it/LC_MESSAGES/: django.mo  django.po
locale/ja/LC_MESSAGES/: django.po
locale/ko/LC_MESSAGES/: django.mo  django.po
locale/pl/LC_MESSAGES/: django.mo  django.po
locale/pt_BR/LC_MESSAGES/: django.mo
locale/ro/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
locale/sk/LC_MESSAGES/: django.mo  django.po
locale/tr/LC_MESSAGES/: django.po
locale/uk/LC_MESSAGES/: django.mo  django.po
locale/vi/LC_MESSAGES/: django.mo  django.po
locale/zh/LC_MESSAGES/: django.mo
locale/zh_TW/LC_MESSAGES/: django.po
static/css/: bootstrap-select.min.css  extra.css  extra_styles.css  global.css  slick-theme.css
static/js/: global.js
templates/: base.html  cart_dropdown.html  home.html  menu.html  menu_full.html
templates/checkout/: details.html  index.html
templates/product/: _filters.html  _fullscreen_products.html  _product_list_banner.html  _product_list_grid.html  details.html  product_collection.html  product_list_base.html
templatetags/: saleor_ext.py
